--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -179,7 +179,7 @@
                 <p>Date published: 10 April 2023 | by Sybil Mayard</p>
                 <h2>Why You Need a Privacy Notice Now</h2>
 
-                <p>Data protection experts frequently work with clients who share their customers' data without permission - are you one of them? If so, you probably don't have a privacy notice.</p>
+                <p>Data protection experts frequently work with clients who share their customers' data without permission - are you one of them? If so, you probably don't have a <a href="https://sybiltec.com/privacy-notice">privacy notice</a>.</p>
 
                 <p>Last week, we asked our LinkedIn connections <strong>"What do you think is the most important factor to consider when creating a trustworthy website?"</strong> Worryingly, 0% of respondents voted for “Transparent privacy notice”. Frankly, we weren't surprised at this result, but if you don't believe that having a transparent privacy notice is important, you should be concerned.</p>
 
