--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -225,7 +225,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wanandco.com/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Wan&Co</a>
                             </div>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs</a>
                             </div>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Astons of London</a>
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.cntassociates.com/"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View CNT Associates</a>
                             </div>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://meitamlondon.com/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Meitam London</a>
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Wardell's Wardrobe</a>
                             </div>
                         </div>
                     </div>
