--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -178,7 +178,7 @@
 
                 </div>
 
-                <div class="center padding-top padding-bottom grey">
+                <div class="testimonials section grey padding-top padding-bottom center">
                     <h2>Ready to Get Started?</h2>
                     <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact">Contact Us Today!</a></div>
                 </div>
@@ -205,7 +205,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                             </ul>        
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View The GDPR Compliance Consultancy</a>
                             </div>
                         </div>
                     </div>
