--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -237,7 +237,7 @@
                         </ul>        
                         <div class="padding-btn">
                             <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
+                            target="_blank" rel="noopener noreferrer">View The GDPR Compliance Consultancy</a>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                         </ul>
                         <div class="padding-btn">
                             <a class ="btn-secondary" href="https://meitamlondon.com/" 
-                            target="_blank" rel="noopener noreferrer">View Client</a>
+                            target="_blank" rel="noopener noreferrer">View Meitam London</a>
                         </div>
                     </div>
                 </div>
