--- a/website-review.html
+++ b/website-review.html
@@ -158,7 +158,7 @@
                     <li>User-friendliness</li>
                     <li>Design</li>
                     <li>Mobile responsiveness</li>
-                    <li>GDPR</li>
+                    <li>GDPR / data protection compliance</li>
                     <li>404 (page not found) errors</li>
                     <li>Proofing errors</li>
                     <li>Search engine optimisation (SEO)</li>
@@ -182,7 +182,7 @@
                         </ul>
                         <div class="padding-btn">
                             <a class ="btn-secondary" href="https://folenglish.com/"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
+                            target="_blank" rel="noopener noreferrer">View Focus on Learning</a>
                         </div>
                     </div>
                 </div>
