--- a/website-design.html
+++ b/website-design.html
@@ -197,7 +197,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre</a>
                             </div>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Astons of London</a>
                             </div>
                         </div>
                     </div>
@@ -228,10 +228,10 @@
                 <div id="emrys-consulting" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/Emrys-Consulting-4.jpg" alt="Emrys Consulting">
+                            <img src="images/clients/Emrys-Consulting-4.jpg" alt="Emrys Technology & Consultancy">
                         </div>
                         <div class="col-7">
-                            <h2>Emrys Consulting</h2>
+                            <h2>Emrys Technology & Consultancy</h2>
                             <h3 style="font-size: 18px;">Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</h3>
                             <ul>
                                 <li>Website design and development</li>
@@ -240,7 +240,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://emrys.group/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Emrys</a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View LD Tiling Contractors</a>
                             </div>
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.nerowireart.com/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View NeroWireArt</a>
                             </div>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Happily Clappily</a>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.encalife.com/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View Encalife</a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://stm238.wixsite.com/swipsearch"
-                                target="_blank" rel="noopener noreferrer">View Client</a>
+                                target="_blank" rel="noopener noreferrer">View SwipSearch</a>
                             </div>
                         </div>
                     </div>
