--- a/404.html
+++ b/404.html
@@ -155,6 +155,15 @@
         </div>
         <div class="main section center">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        404 Page Not Found
+                    </li>
+                </ol>
                 <h2>404</h2>
                 <hr>
                 <h3>We searched everywhere</h3>
