--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -171,6 +171,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        5 Best Tools For Remote Working
+                    </li>
+                </ol>
                 <p>Date published: 21 April 2020 | by Sybil Mayard</p>
                 <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free.</p>
 
