--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        7 Reasons Why You Should Be Using Shopify
+                    </li>
+                </ol>
                 <p>Date Updated: 27 December 2023 | by Sybil Mayard</p>
                 <p>Are you planning to sell your products or services online? Consider choosing <strong>Shopify</strong>, one of the most popular e-commerce platforms. Here I present to 
                     you a few of the benefits you can enjoy.</p>
