--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -46,12 +46,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Remote Working: How to Survive with 6 Tips - Blog | Sybiltec</title>       
+        <title>Remote Working: How to Survive with 6 Tips | Blog | Sybiltec</title>       
         <meta name="Description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Remote Working: How to Survive with 6 Tips - Blog | Sybiltec" />
+        <meta property="og:title" content="Remote Working: How to Survive with 6 Tips | Blog | Sybiltec" />
         <meta property="og:description" content="Working remotely is essential where possible, due to the current pandemic. Read my blog for tips and advice if you find working from home a struggle." />
         <meta property="og:url" content="https://sybiltec.com/6-tips-for-surviving-remote-working" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -165,12 +165,21 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>6 Tips for Surviving Remote Working</h1>
+                <h1>Remote Working: How to Survive with 6 Tips</h1>
                     
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Remote Working: How to Survive With 6 Tips
+                    </li>
+                </ol>
                 <p>Date published: 27 March 2020 | by Sybil Mayard</p>
                 <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively.</p>
 
