--- a/about.html
+++ b/about.html
@@ -156,6 +156,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        About
+                    </li>
+                </ol>
                 <h2>About Sybil</h2>
                 <hr class="left-align">
 
