--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Accessible Design: Creating an Inclusive Website
+                    </li>
+                </ol>
                 <p>Date published: 10 March 2024 | by Sybil Mayard</p>
 
                 <p>Designing an <strong>accessible website</strong> involves creating a website that caters to as many types of user as possible, including those with visual/hearing impairments and disabilities. In this blog post, I provide you with a few quick tips for improving the accessibility of your site. I will be adding to this article in future, so keep checking back for further updates.</p>
