--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Are You Inadvertently Abusing Your Customers' Data?
+                    </li>
+                </ol>
                 <p>Date published: 10 April 2023 | by Sybil Mayard</p>
                 <h2>Why You Need a Privacy Notice Now</h2>
 
