--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How to Backup Your WordPress Website with UpdraftPlus
+                    </li>
+                </ol>
                 <p>Date updated: 20 December 2023 | by Sybil Mayard</p>
                 <h2>Why Should You Backup Your Website?</h2>
 
