--- a/blog-2.html
+++ b/blog-2.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Sybiltec's Blog Page 2
+                    </li>
+                </ol>
                 <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
                 <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                 <br>
