--- a/blog-3.html
+++ b/blog-3.html
@@ -153,12 +153,19 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <div class="padding-top">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Sybiltec's Blog Page 3
+                    </li>
+                </ol>
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
                     <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Create a Trustworthy Website</a>
-                </div>
                 <div class="padding-top">
                     <h2>Cyber Security Best Practices for You and Your Business</h2>
                     <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
