--- a/blog.html
+++ b/blog.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Sybiltec's Blog
+                    </li>
+                </ol>
                 <h2>8 Ways to Speed Up Your Windows PC</h2>
                     <p>It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
                     <br>
