--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        10 Common Website Mistakes and How to Avoid Them
+                    </li>
+                </ol>
                 <p>Date updated: 21 February 2024 | by Sybil Mayard</p>
                 <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same <strong>mistakes on your website</strong>.</p>
 
