--- a/faqs.html
+++ b/faqs.html
@@ -311,11 +311,20 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Frequently Asked Questions</h1>               
+                <h1>FAQs</h1>               
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
+              <ol class="breadcrumb">
+                <li>
+                    <a href="https://sybiltec.com">Home</a>
+                </li>
+                >
+                <li>
+                    FAQs
+                </li>
+            </ol>
                 <h2>General Questions</h2>
                 <hr class="left-align">
 
