--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)
+                    </li>
+                </ol>
                 <p>Date updated: 15 December 2023 | by Sybil Mayard</p>
 
                 <div class="center"><img src="https://sybiltec.com/images/mr-bean-waiting.png" alt="Mr Bean waiting: when your website takes more than 3 seconds to load"></div>
