--- a/guide-to-updating-your-wordpress-website.html
+++ b/guide-to-updating-your-wordpress-website.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        A Guide to Updating Your WordPress Website
+                    </li>
+                </ol>
                 <p>Date published: 10 May 2023 | by Sybil Mayard</p>
 
                 <h2>Why Should I Keep My WordPress Website Updated?</h2>
