--- a/how-to-choose-web-designer.html
+++ b/how-to-choose-web-designer.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How to Choose a Web Designer
+                    </li>
+                </ol>
                 <p>Date published: 09 January 2024 | by Sybil Mayard</p>
                 
                 <p>You've got a brilliant business idea and you can't wait to bring it to life. So the next natural step is to build your website so you can share it with the world! But wait, you realise that you have no experience in creating a website and you don't really have the time (as a small business owner, you probably already have a million other things to take care of already).</p>
