--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        The Importance of Contact Information on Your Website
+                    </li>
+                </ol>
                 <p>Date published: 10 April 2023 | by Sybil Mayard</p>
 
                 <h2>Why Contact Information is Important</h2>
