--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How to Improve the SEO of Your Website
+                    </li>
+                </ol>
                 <p>Date updated: 21 February 2024 | by Sybil Mayard</p>
                 <h2>What is SEO?</h2>
 
