--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -174,6 +174,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How to Install GA4 on Your WordPress Website
+                    </li>
+                </ol>
                 <h2>Google Analytics 4 Installation on WordPress</h2>
                 <p>Date published: 19 June 2023 | by Sybil Mayard</p>
 
