--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -153,9 +153,18 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Last updated: 8 April 2024</p>
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Privacy Notice
+                    </li>
+                </ol>
+                <p>Last updated: 5 May 2024</p>
                 <h2>Our contact details</h2>
-                <p>Name: Sybil Mayard</p>
+                <p>Name: Sybiltec Web Design</p>
                 <p>Email: <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a></p>
                 <p>Address: The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
                 <h2>The types of personal information we collect</h2>
