--- a/projects.html
+++ b/projects.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Projects
+                    </li>
+                </ol>
                 <h2 class="padding-top" id="vidcareer">VidCareer</h2>
                 <hr class="left-align">
 
