--- a/sitemap.html
+++ b/sitemap.html
@@ -152,6 +152,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Sitemap
+                    </li>
+                </ol>
                 <h2>Main</h2>
                 <ul>
                     <li><a href="https://sybiltec.com/about">About</a></li>
