--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Terms and Conditions
+                    </li>
+                </ol>
                 <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec Web Design ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
                 <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
