--- a/training.html
+++ b/training.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Training
+                    </li>
+                </ol>
                 <p>I am available to facilitate your workshop or webinar. Here are some examples of events I've taken part in previously.</p>
                 <h2>Workshops</h2>
                 <div class="row">
