--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How Do I Upgrade to Google Analytics 4?
+                    </li>
+                </ol>
                 <p>Date updated: 31 December 2023 | by Sybil Mayard</p>
 
                 <h2>What is GA4?</h2>
