--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        9 Ways to Improve the UX (User Experience) of Your Website
+                    </li>
+                </ol>
                 <p>Date updated: 20 March 2024 | by Sybil Mayard</p>
 
                 <h2>What is User Experience?</h2>
