--- a/ways-to-speed-up-your-windows-pc.html
+++ b/ways-to-speed-up-your-windows-pc.html
@@ -170,6 +170,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        8 Ways to Speed Up Your Windows PC
+                    </li>
+                </ol>
                 <p>Date published: 17 April 2024 | by Sybil Mayard</p>
                 <p>If you're suffering from a slow computer or laptop, read our blog post on eight ways to speed up your PC. We've conveniently listed the steps in order of difficulty to help you decide on the best steps to take according to your level of confidence with fixing your PC.</p>
                 <h2>1. Install the Latest Updates</h2>
