--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -174,6 +174,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        The Web Design Process Explained in 12 Easy Steps
+                    </li>
+                </ol>
                 <p>Date updated: 17 December 2023 | by Sybil Mayard</p>
 
                 <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the <strong>web design process</strong> is like, I've outlined the steps below to help you understand what is involved.</p>
