--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -149,6 +149,15 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Web Design Services in Surrey
+                    </li>
+                </ol>
                 <h2>The Importance of a Website for Your Small Business</h2>
                 <p>Standing out in an increasingly competitive market is one of the biggest challenges for the small businesses of today. Being present on a few social media platforms is no longer sufficient to develop a successful business. You must combine a range of methods to form an effective marketing strategy, and your website should be central to that strategy.</p>
 
