--- a/website-design.html
+++ b/website-design.html
@@ -22,7 +22,7 @@
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Small Business Website Design"
+                "name": "Small Business Web Design"
               }]
             }
         </script>
@@ -147,12 +147,21 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Small Business Website Design</h1>
+                <h1>Small Business Web Design</h1>
                 <h2>A Fully-Customised Design for Your Website</h2>
             </div>
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Small Business Web Design
+                    </li>
+                </ol>
                 <h2>Why You Need a Website</h2>
 
                 <p>In today's digital era, having a dynamic online presence is paramount to business success. Despite the numerous marketing methods that are available today, like social media, email marketing, video marketing and so on, your website is the only platform that you truly own and control. Therefore, your website must be at the very core of your marketing efforts. Without a website, your business misses out on many opportunities, resulting in reduced brand awareness, lead generation and sales. In order to maximise the potential of your website, however, it must be designed and developed according to your business goals and requirements. Other considerations, including good user experience, SEO (search engine optimisation) and accessibility are also vital. A <strong>professional web designer</strong> can help you to create a website which conforms to these best practices.</p>
