--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -175,6 +175,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        10 Best Free WordPress Plugins
+                    </li>
+                </ol>
                 <p>Date published: 30 January 2024 | by Sybil Mayard</p>
                 
                 <p>WordPress is one of the most popular website builder platforms on the internet. Why is that so? One reason is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. If you are unsure of where to begin, read the article below on my <strong>top 10 free plugins for WordPress</strong>.</p>
