--- a/clients.html
+++ b/clients.html
@@ -152,6 +152,15 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">  
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Clients
+                    </li>
+                </ol>
                 <p>Throughout my freelancing career, I've helped clients from a wide range of industries achieve their goal of improving their online presence. Here is a selection of clients who I've worked with recently.</p>
 
                 <h2>Case Studies</h2>
