--- a/google-search-console.html
+++ b/google-search-console.html
@@ -174,6 +174,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        How to Use Google Search Console: a Quick Guide
+                    </li>
+                </ol>
                 <p>Date updated: 10 March 2024 | by Sybil Mayard</p>
                 <h2>What is Google Search Console?</h2>
 
