--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -153,6 +153,15 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Leaflet Design
+                    </li>
+                </ol>
                 <h2>Posters, flyers and social media post designs</h2>
                 <div class="design padding-top">
                     <img id="0" class="myImg" src="images/design/0.jpg" alt="Laugh, Sing & Play leaflet" onClick="openModal(0)">
