--- a/services.html
+++ b/services.html
@@ -146,12 +146,21 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Sybiltec's Services</h1>          
+                <h1>Services</h1>          
             </div>
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>What I Offer</h2>
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Services
+                    </li>
+                </ol>
+                <h2>What We Offer</h2>
                 <div class="row">
                     <div class="col-4">
                         <div class="offer-card center">
