--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -176,6 +176,15 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <ol class="breadcrumb">
+                    <li>
+                        <a href="https://sybiltec.com">Home</a>
+                    </li>
+                    >
+                    <li>
+                        Shopify vs WooCommerce: What Are the Differences?
+                    </li>
+                </ol>
                 <p>Date published: 11 June 2023 | by Sybil Mayard</p>
 
                 <h2>Introduction</h2>
